[package]
name = "cpuinfo"
version = "2.0.0"
edition = "2021"
authors = ["ThatCyberLynx"]
description = "A cross-platform CLI tool to get CPU information"

[dependencies]
sysinfo = "0.37"
raw-cpuid = "11.6.0"
# colored = "2.0.4"
num_cpus = "1.17.0"
anyhow = "1.0.99"

#sysinfo = "0.30.7"
#raw-cpuid = "11.5.0"
# colored = "2.0.4"
#num_cpus = "1.16.0"
#anyhow = "1.0.75"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true

[profile.maxOptim]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
strip = true
incremental = false
rpath = false